--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,7 +32,12 @@ body.no-scroll {
 	padding-right: 30px;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-	margin: auto
+	margin: auto;
+
+	@media screen and (max-width: 992px) {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 }
 
 .btn {
@@ -587,6 +592,15 @@ body.no-scroll {
 		grid-column-gap: 30px;
 		padding-bottom: 35px;
 		margin: auto;
+
+		@media screen and (max-width: 992px) {
+			display: flex;
+			flex-direction: column;
+			gap: 100px;
+			align-items: center;
+			justify-content: center;
+
+		}
 
 		img {
 			max-width: 100%;
